--- a/APPSCRIPT FILES/Index.html
+++ b/APPSCRIPT FILES/Index.html
@@ -953,13 +953,14 @@
   <script>
     // TODO: PASTE YOUR FIREBASE CONFIG HERE
     const firebaseConfig = {
-      apiKey: "AIzaVy...",
-      authDomain: "your-project.firebaseapp.com",
-      databaseURL: "https://your-project.firebaseio.com",
-      projectId: "your-project",
-      storageBucket: "your-project.appspot.com",
-      messagingSenderId: "123...",
-      appId: "1:..."
+      apiKey: "AIzaSyCKXYSIjysAaMX9BkW4FqckvTkqNMxCNw4",
+      authDomain: "project-list-designers-11c69.firebaseapp.com",
+      databaseURL: "https://project-list-designers-11c69-default-rtdb.firebaseio.com",
+      projectId: "project-list-designers-11c69",
+      storageBucket: "project-list-designers-11c69.firebasestorage.app",
+      messagingSenderId: "460395532456",
+      appId: "1:460395532456:web:19d55e0556a99e8f5b729d",
+      measurementId: "G-H51PQ99SCR"
     };
 
     // Initialize Firebase
