--- a/APPSCRIPT FILES/OpsJs.html
+++ b/APPSCRIPT FILES/OpsJs.html
@@ -336,7 +336,9 @@
                         const db = fb.database();
                         const updates = {};
                         res.generatedNotifications.forEach(n => {
-                            updates['notifications/' + n.id] = n;
+                            const safeId = String(n.id).replace(/\./g, '_');
+                            n.id = safeId;
+                            updates['notifications/' + safeId] = n;
                         });
                         db.ref().update(updates).catch(e => console.error('[Notif] Push failed', e));
                     }
