--- a/APPSCRIPT FILES/PmJs.html
+++ b/APPSCRIPT FILES/PmJs.html
@@ -651,7 +651,9 @@
           const db = fb.database();
           const updates = {};
           res.generatedNotifications.forEach(n => {
-            updates['notifications/' + n.id] = n;
+            const safeId = String(n.id).replace(/\./g, '_');
+            n.id = safeId;
+            updates['notifications/' + safeId] = n;
           });
           db.ref().update(updates).catch(e => console.error('[Notif] Push failed', e));
         }
@@ -772,7 +774,9 @@
             const db = fb.database();
             const updates = {};
             res.generatedNotifications.forEach(n => {
-              updates['notifications/' + n.id] = n;
+              const safeId = String(n.id).replace(/\./g, '_');
+              n.id = safeId;
+              updates['notifications/' + safeId] = n;
             });
             // No await, fire and forget
             db.ref().update(updates).catch(e => console.error('[Notif] Push failed', e));
