--- a/APPSCRIPT FILES/Index.html
+++ b/APPSCRIPT FILES/Index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-
+//1026
 <head>
   <meta charset="UTF-8">
   <base target="_top">
@@ -961,7 +961,7 @@
     <div class="nav">
       <div class="header">
         <div class="brand">
-          <div class="brand-logo"><img id="logoImg" src="" alt="logo"></div>
+          <div class="brand-logo"><img id="logoImg" src="https://raw.githubusercontent.com/marvinpacsands/Project_List_Designers/625a0afc3efb3baeee1e7750765b5e8a1881393c/logo.png" alt="logo"></div>
           <div class="brand-info">
             <h1 id="pageTitle">My Projects</h1>
             <p id="whoami">Loading...</p>
