--- a/APPSCRIPT FILES/CoreJs.html
+++ b/APPSCRIPT FILES/CoreJs.html
@@ -84,6 +84,12 @@ function gasCall(fnName, arg) {
    - No writes yet
    - Just a safe wrapper we’ll use in Step 2+
 */
+
+
+/* ================= FIREBASE (DOORBELL MODE) =================
+   - Still NO listeners yet (that’s Step 3/4)
+   - This only provides tiny “pings” we can write after meaningful changes
+*/
 window.FB = window.FB || (() => {
   const state = { inited: false, enabled: false, initError: null };
 
@@ -95,17 +101,17 @@ window.FB = window.FB || (() => {
       if (!window.FIREBASE_ENABLED) throw new Error('FIREBASE_ENABLED is false');
       if (!window.firebase) throw new Error('Firebase SDK not loaded');
 
-      // Only initialize Firebase app when enabled (Step 2+)
+      // Initialize app if not already
       if ((!firebase.apps || !firebase.apps.length) && window.FIREBASE_CONFIG) {
         firebase.initializeApp(window.FIREBASE_CONFIG);
       }
 
       state.enabled = true;
-      console.log('[Firebase] Plumbing ready');
+      console.log('[Firebase] Doorbell ready');
     } catch (e) {
       state.enabled = false;
       state.initError = e;
-      console.warn('[Firebase] Plumbing not active:', (e && e.message) ? e.message : e);
+      console.warn('[Firebase] Doorbell disabled:', (e && e.message) ? e.message : e);
     }
     return state;
   }
@@ -117,10 +123,63 @@ window.FB = window.FB || (() => {
   }
 
   function safeKey(email) {
-    return String(email || '').toLowerCase().replace(/[.#$\[\]]/g, '_');
+    return String(email || '')
+      .toLowerCase()
+      .trim()
+      .replace(/[.#$\[\]]/g, '_');
   }
 
-  return { init, db, safeKey, _state: state };
+  // Extract recipient emails from server-generated notifications
+  function recipientsFromGenerated_(generatedNotifications) {
+    const out = new Set();
+
+    (generatedNotifications || []).forEach(n => {
+      const candidate =
+        (n && (n.recipientEmail || n.toEmail || n.email || n.to || n.recipient)) || '';
+
+      // If it’s a comma-separated list, split it
+      String(candidate)
+        .split(',')
+        .map(s => s.trim())
+        .filter(Boolean)
+        .forEach(v => {
+          // Only keep real emails (prevents mismatched keys)
+          if (v.includes('@')) out.add(v.toLowerCase());
+        });
+    });
+
+    return Array.from(out);
+  }
+
+  // The actual “doorbell”: tiny writes only (timestamps), per recipient
+  function ringNotifications(generatedNotifications) {
+    const database = db();
+    if (!database) return Promise.resolve(false);
+
+    const recipients = recipientsFromGenerated_(generatedNotifications);
+    if (!recipients.length) return Promise.resolve(false);
+
+    const ts = firebase.database.ServerValue.TIMESTAMP;
+    const updates = {};
+
+    recipients.forEach(email => {
+      const k = safeKey(email);
+      if (!k) return;
+      updates[`signals/notif/${k}`] = ts;
+    });
+
+    // Optional global bell (tiny) for debugging / future fallback
+    updates['signals/notif/_global'] = ts;
+
+    return database.ref().update(updates)
+      .then(() => true)
+      .catch(err => {
+        console.warn('[Firebase] ringNotifications failed:', err);
+        return false;
+      });
+  }
+
+  return { init, db, safeKey, ringNotifications, _state: state };
 })();
 
 
@@ -629,6 +688,13 @@ function saveRow(idx, view) {
     }).then(res => {
       if (dot) { dot.className = 'sync-dot saved'; setTimeout(() => dot.className = 'sync-dot', 2000); }
       if (msg) { msg.textContent = 'Upd ' + (res && res.savedAtDisplay ? res.savedAtDisplay : ''); }
+
+      // ✅ Step 2: Doorbell ping (tiny) — only if server generated notifications
+      if (res && res.generatedNotifications && res.generatedNotifications.length > 0) {
+        if (window.FB && typeof FB.ringNotifications === 'function') {
+          FB.ringNotifications(res.generatedNotifications);
+        }
+      }
     }).catch(err => {
       console.error(err);
       if (dot) { dot.className = 'sync-dot'; dot.style.background = 'red'; }
@@ -636,6 +702,7 @@ function saveRow(idx, view) {
     });
   }
 }
+
 
 
 function debounceSave(idx, view) {
