--- a/APPSCRIPT FILES/Index.html
+++ b/APPSCRIPT FILES/Index.html
@@ -952,7 +952,7 @@
 <script>
   // Keep Firebase disabled for now so nothing “switches over” yet.
   // We’ll turn this ON when we start Step 2.
-  window.FIREBASE_ENABLED = false;
+  window.FIREBASE_ENABLED = true;
 
   window.FIREBASE_CONFIG = {
     apiKey: "AIzaSyCKXYSIjysAaMX9BkW4FqckvTkqNMxCNw4",
