--- a/APPSCRIPT FILES/PmJs.html
+++ b/APPSCRIPT FILES/PmJs.html
@@ -1,5 +1,5 @@
 <script>
-  //447
+  //440
 function ensureLegacyProjectShape_(p) {
   if (!p) return p;
 
@@ -644,8 +644,9 @@ async function savePM(idx, card) {
   call.then(res => {
     if (msg) msg.textContent = 'Upd ' + (res && res.savedAtDisplay ? res.savedAtDisplay : '');
 
-    // ✅ Step 2: Doorbell ping (tiny) — only if server generated notifications
+    // ✅ STEP 2: tiny doorbell ping only (no big writes)
     if (res && res.generatedNotifications && res.generatedNotifications.length > 0) {
+      console.log('[Notif] Server generated notifications (PM):', res.generatedNotifications);
       if (window.FB && typeof FB.ringNotifications === 'function') {
         FB.ringNotifications(res.generatedNotifications);
       }
@@ -687,79 +688,44 @@ function saveCustomOrder(orderedRowIndexes) {
 // Make globally accessible for core.js drag-drop handlers
 window.saveCustomOrder = saveCustomOrder;
 
-async function executeRemoteShift(pmRowIndex, desSlot, desName, newPrio) {
-  const person = PEOPLE_LIST.find(p => p.name === desName);
-  const query = person ? person.email : desName;
-
-  document.getElementById('liveText').textContent = 'Shifting...';
-
+async function executeRemoteShift(pmRowIndex, desSlot, desName, newVal) {
   try {
-    const data = await apiProjectsRequest_({ mode: 'mine', email: query });
-    let projects = ensureLegacyProjects_(data.projects || []);
+    document.getElementById('liveText').textContent = 'Shifting...';
 
-    const targetProj = projects.find(p => String(p.rowIndex) === String(pmRowIndex));
-    if (!targetProj) {
-      console.error('Target project not found in designer list', pmRowIndex);
-      return;
-    }
+    // Build request body (unchanged)
+    const body = {
+      email: window.currentUser.email,
+      mode: 'pm',
+      payload: {
+        rowIndex: pmRowIndex,
+        shiftDesignerName: desName,
+        shiftNewPriority: newVal
+      }
+    };
 
-    const updates = [];
-    const targetPrioInt = parseInt(newPrio, 10);
-
-    updates.push({
-      rowIndex: targetProj.rowIndex,
-      priority: String(newPrio),
-      notes: targetProj.my?.notes || ''
-    });
-
-    let others = projects.filter(p => String(p.rowIndex) !== String(pmRowIndex));
-    let bumpVal = targetPrioInt;
-
-    while (true) {
-      const conflict = others.find(p => parseInt(p.my?.priority, 10) === bumpVal);
-      if (!conflict) break;
-
-      const nextVal = bumpVal + 1;
-      let newStr = String(nextVal);
-      if (nextVal > 10) newStr = '';
-
-      updates.push({
-        rowIndex: conflict.rowIndex,
-        priority: newStr,
-        notes: conflict.my?.notes || ''
+    let res;
+    if (typeof apiUpdateClient === 'function') {
+      res = await apiUpdateClient(body);
+    } else {
+      const r = await fetch('/api/update', {
+        method: 'POST',
+        headers: { 'Content-Type': 'application/json' },
+        body: JSON.stringify(body)
       });
-
-      if (newStr === '') break;
-      bumpVal = nextVal;
+      res = await r.json();
     }
 
-    for (const u of updates) {
-      const body = {
-        email: query,
-        mode: 'mine',
-        payload: {
-          rowIndex: u.rowIndex,
-          priority: u.priority,
-          notes: u.notes,
-          realActorEmail: window.currentUser ? window.currentUser.email : null,
-          skipNotifications: String(u.rowIndex) !== String(pmRowIndex)
-        }
-      };
-
-      if (typeof apiUpdateClient === 'function') {
-        await apiUpdateClient(body);
-      } else {
-        await fetch('/api/update', {
-          method: 'POST',
-          headers: { 'Content-Type': 'application/json' },
-          body: JSON.stringify(body)
-        });
+    // ✅ STEP 2: tiny doorbell ping only (no big writes)
+    if (res && res.generatedNotifications && res.generatedNotifications.length > 0) {
+      console.log('[Notif] Server generated notifications (Shift):', res.generatedNotifications);
+      if (window.FB && typeof FB.ringNotifications === 'function') {
+        FB.ringNotifications(res.generatedNotifications);
       }
     }
 
     loadPM();
   } catch (e) {
-    console.error('Remote Shift Failed', e);
+    console.error(e);
     document.getElementById('liveText').textContent = 'Error';
   }
 }
